# melos

./: .gitignore  CLAUDE.md  COMPOSITION_CRITIQUE.md  Cargo.toml  LICENSE.md  LLM_USER_GUIDE.md  README.md  string_quartet_in_d_minor.mel
programs/: emergences.mel  fugue_d_minor.mel  fugue_labyrinth.mel  halting_problem.mel  striation_study_0.mel  test_repro.mel  the_clearing.mel  three_attentions.mel  twinkle.mel
programs/anamnesis/: II_spectra.mel  I_umbra.mel
programs/five_fragments/: III_sappho_fragment_31.mel  IV_nothing_gold_can_stay.mel  I_the_lake_isle_of_innisfree.mel  PROGRAM_NOTES.md
programs/metamorphosis/: III_Intermezzo.mel  II_Fuga.mel  IV_Toccata.mel
programs/test_multi_file/: score.mel
scores/: chronos_fractured.mel  claude_atonal_fixed.mel  morning_in_the_valley.mel  necropolis_study.mel  nocturne_eb.mel  octatonic_study.mel  palimpsest_quartet.mel  rhythmic_etude.mel  singularity.mel  straight_blues.mel  swung_blues.mel  twilight_elegy.mel
skill/: README.md  SKILL.md
src/: ast.rs  codegen.rs  grammar.pest  grammar.rs  inspect.rs  instruments.rs  ir.rs  lib.rs  loader.rs  main.rs  parser.rs  walker.rs  wasm.rs
src/gui/: mod.rs  (+2 more)
tests/: bare_name_comment.mel  bare_name_comment_test.rs  bare_name_tests.rs  chord_ir_test.rs  chord_parser_test.rs  codegen_tests.rs  comment_newline_repro.mel  comment_newline_test.rs  comment_repro.mel  dynamics_test.rs  ir_tests.rs  loader_tests.rs  parser_tests.rs  swing_tests.rs  time_signature_tests.rs  whitespace_repro.mel  whitespace_test.rs
web/: package-lock.json  package.json  vite.config.ts
(+56 files in other folders)
