[package]
name = "melos"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
midly = "0.5.3"
pest = "2.8.4"
pest_derive = "2.8.4"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.10"
